--- a/.env.template
+++ b/.env.template
@@ -6,12 +6,12 @@ DEBUG=False
 EMAIL_HOST=smtp.example.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=your_email@example.com
-EMAIL_HOST_PASSWORD=your_email_password
+EMAIL_HOST_USER='2442k3663@gmail.com'
+EMAIL_HOST_PASSWORD='iphl mrmb eryg coib'
 
 # Payment settings
-RAZORPAY_KEY_ID=your_razorpay_key_id
-RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+RAZORPAY_KEY_ID='rzp_test_YH6hvLDxkYnu4k'
+RAZORPAY_KEY_SECRET='5RJTkWRdt9673KP042Gw94o6'
 
 # Host settings
 ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com 
