--- a/.env.template
+++ b/.env.template
@@ -6,12 +6,15 @@ DEBUG=False
 EMAIL_HOST=smtp.example.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER='2442k3663@gmail.com'
-EMAIL_HOST_PASSWORD='iphl mrmb eryg coib'
+EMAIL_HOST_USER=your_email@example.com
+EMAIL_HOST_PASSWORD=your_email_password
 
 # Payment settings
-RAZORPAY_KEY_ID='rzp_test_YH6hvLDxkYnu4k'
-RAZORPAY_KEY_SECRET='5RJTkWRdt9673KP042Gw94o6'
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
 
 # Host settings
-ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com 
+ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com
+
+# NewsAPI settings
+NEWSAPI_KEY=your_newsapi_key 
