--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: safecall
     env: python
-    buildCommand: "pip install -r requirements-render.txt && python manage.py migrate && python manage.py collectstatic --no-input"
+    buildCommand: "pip install -r requirements.txt && python manage.py migrate && python manage.py collectstatic --no-input"
     startCommand: "gunicorn safecall.wsgi:application"
     envVars:
       - key: PYTHON_VERSION
@@ -12,7 +12,7 @@ services:
       - key: DEBUG
         value: false
       - key: ALLOWED_HOSTS
-        sync: false
+        value: ".onrender.com"
       - key: DATABASE_URL
         sync: false
       - key: EMAIL_HOST
