--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: safecall
     env: python
-    buildCommand: "pip install -r requirements.txt && python manage.py migrate && python manage.py collectstatic --no-input"
+    buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --no-input && python setup_database.py"
     startCommand: "gunicorn safecall.wsgi:application"
     # You need to manually create a PostgreSQL database in the Render dashboard
     # and set the DATABASE_URL environment variable in your service
@@ -16,8 +16,7 @@ services:
       - key: ALLOWED_HOSTS
         value: ".onrender.com"
       - key: DATABASE_URL
-        # NOTE: This will only work if the database is created first
-        # If DATABASE_URL is not set, the app will use SQLite by default
+        # This will be automatically set when the database is created
         fromDatabase:
           name: safecall_db
           property: connectionString
@@ -38,9 +37,10 @@ services:
       - key: NEWSAPI_KEY
         sync: false
 
-# Create this database manually in the Render dashboard if using render.yaml
-# or remove this section and create the database separately
+# Define the database separately - this needs to be created first
 databases:
   - name: safecall_db
     databaseName: safecall
-    plan: free 
+    plan: free
+    # Migrations will be run after the database is connected
+    ipAllowList: [] # Allow all connections 
