--- a/render.yaml
+++ b/render.yaml
@@ -22,6 +22,10 @@ services:
           property: connectionString
       - key: STATIC_ROOT
         value: /opt/render/project/src/staticfiles
+      - key: STATIC_URL
+        value: /static/
+      - key: WHITENOISE_ALLOW_ALL_ORIGINS
+        value: "true"
       - key: EMAIL_HOST
         sync: false  
       - key: EMAIL_PORT
