--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,19 @@ services:
   - type: web
     name: safecall
     env: python
-    buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --no-input --clear && python setup_database.py"
+    buildCommand: |
+      pip install -r requirements.txt
+      python manage.py collectstatic --no-input --clear
+      # Copy static files to a special directory that won't be processed
+      mkdir -p staticfiles_direct
+      cp -r static/LOGOS staticfiles_direct/
+      cp -r static/images staticfiles_direct/
+      cp -r static/css staticfiles_direct/
+      cp -r static/js staticfiles_direct/
+      python setup_database.py
     startCommand: "gunicorn safecall.wsgi:application"
+    # Specify static files directory for Render
+    staticPublishPath: "./staticfiles"
     # You need to manually create a PostgreSQL database in the Render dashboard
     # and set the DATABASE_URL environment variable in your service
     envVars:
